--- a/README
+++ b/README
@@ -17,6 +17,7 @@ focused on curves and surfaces. The Bspline & bezer curve could be constructed b
 
 
 ========================
-THE myrender folder combine the ray casting and recursive ray tracing , I also refer to  Peter Shirley's Ray Tracing: The Next Week serials.
+THE myrender folder combine the ray casting and recursive ray tracing , I  refer to  lecture notes & Peter Shirley's Ray Tracing: The Next Week serials.
 
 =========================
+NOtice TWO, THREE,FOUR I haven not do the work in these folders, remain start-code.
